<resources>
  <string name="app_name">SeeVoice</string>
  <string name="app_host">139.162.82.31</string>
  <string name="app_schema">http</string>
  <string name="app_path">/xxx/yyy</string>
  <string name="recognizer_service_available">recognizer service available</string>
  <string name="recognizer_service_incapable">recognizer service incapable</string>
  <string name="recording_voice_status">声音录制状态</string>
  <string name="advertising_title">广告</string>
  <string name="button_go_to_homepage">跳转到首页</string>
  <string name="label_empty"> </string>
  <string name="label_exercise">练习</string>
  <string name="label_exercise_supervise">监督学习</string>
  <string name="label_exercise_examine">检查</string>
  <string name="label_record">录入</string>
  <string name="label_pressing_when_talking">按住说</string>
  <string name="label_title">声音名称</string>
  <string name="label_phonetic">声音音标</string>
  <string name="label_author">作者</string>
  <string name="label_save">保存</string>
  <string name="label_cancel">取消</string>
  <string name="label_reset">重置</string>
  <string name="label_modify">修改</string>
  <string name="label_self">我</string>
  <string name="label_about">关于</string>
  <string name="label_donate">捐助</string>
  <string name="label_thanks">致谢</string>
  <string name="label_declaration">声明</string>
  <string name="label_save_success">保存成功</string>
  <string name="label_specification_record">标准录入</string>
  <string name="menu_account_sign_up">注册</string>
  <string name="menu_exercise_to_record">@string/label_record</string>
  <string name="menu_to_select_language">选择语言</string>
  <string name="menu_to_select_exercise_database">选择练习库</string>
  <!-- thanks -->
  <string name="label_thanks_title">致谢</string>
  <string name="content_thanks">
    感谢刘**提供的思路，感谢刘**给予产品设计及体验支持。
    感谢NG提供的machine-learning课程。
    感谢探索频道提供的科普知识。
  </string>
  <string name="label_thanks_license">LICENSE</string>
  <string name="content_thanks_license">MIT</string>

  <!-- about -->
  <string name="content_about">这个应用我希望能够展示声音的形状、特征，让人可以直接通过观看就知道两次发音是否一致。本来想放弃的，
    但是看到很多听障朋友努力的融入社会，独立生活。我觉得应该尽一份心力。
    如果大家有兴趣，可以交流或者自己搞，只希望尽快帮助到需要帮助的人。
    建议以太坊捐助，方便发放SVT。BitCoin的捐助，基本上就只能是捐助了。
    大家切记使用个人钱包捐助，方便返利。
    如果不熟悉怎么使用，就不要勉强了。
  </string>
  <string name="label_about_eth">以太坊</string>
  <string name="content_about_eth">0x00647cad1E1EFB739376B9dfA45BcF4D2CaC10a4</string>
  <string name="label_about_bit_coin">比特币</string>
  <string name="content_about_bit_coin">1AEaL2RQVHazASuQqtHUMY3d1kCTrGJFHk</string>

  <!-- me -->
  <string name="label_me_account">账号</string>
  <string name="label_me_password">密码</string>
  <string name="label_me_old_password">旧密码</string>
  <string name="label_me_new_password">新密码</string>
  <string name="label_me_confirm_password">确认密码</string>
  <string name="label_me_title">称谓</string>
  <string name="label_me_lang">母语</string>
  <string name="label_me_full_name">全称</string>
  <string name="label_me_edit">修改</string>
  <string name="menu_me_account_edit">编辑</string>
  <string name="menu_me_account_add">增加</string>
  <string name="menu_me_account_switch">切换</string>
  <string name="hint_me_input_account">可以打印的字符</string>
  <string name="hint_me_input_password">非空字符字母与数字，区分大小写</string>
  <string name="hint_me_old_password">输入旧密码</string>
  <string name="hint_me_new_password">@string/hint_me_input_password</string>
  <string name="hint_me_confirm_password">再次输入密码</string>
  <string name="hint_me_input_title">称呼：总，董事长，先生，女士之类的</string>
  <string name="hint_me_input_lang">输入母语简写</string>
  <string name="hint_me_input_full_name">输入名称</string>
</resources>
