<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/meFormControl"
      android:text="@string/label_me_account"
      />
    <EditText
      android:id="@+id/input_me_account"
      style="@style/meFormInput"
      android:inputType="text"
      android:hint="@string/hint_me_input_account"
      />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/meFormControl"
      android:text="@string/label_me_new_password"
      />
    <EditText
      android:id="@+id/input_me_new_password"
      style="@style/meFormInput"
      android:inputType="textPassword"
      android:hint="@string/hint_me_new_password"
      />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/meFormControl"
      android:text="@string/label_me_confirm_password"
      />
    <EditText
      android:id="@+id/input_me_confirm_password"
      style="@style/meFormInput"
      android:inputType="textPassword"
      android:hint="@string/hint_me_confirm_password"
      />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/meFormControl"
      android:text="@string/label_me_title"
      />
    <EditText
      android:id="@+id/input_me_title"
      style="@style/meFormInput"
      android:inputType="text"
      android:hint="@string/hint_me_input_title"
      />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/meFormControl"
      android:text="@string/label_me_lang"
      />
    <EditText
      android:id="@+id/input_me_lang"
      style="@style/meFormInput"
      android:inputType="text"
      android:hint="@string/hint_me_input_lang"
      />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/meFormControl"
      android:text="@string/label_me_full_name"
      />
    <EditText
      android:id="@+id/input_me_full_name"
      style="@style/meFormInput"
      android:inputType="text"
      android:hint="@string/hint_me_input_full_name"
      />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
      android:id="@+id/action_me_save"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      style="@style/meFormControl"
      android:text="@string/label_save"
      />
    <Button
      android:id="@+id/action_me_reset"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      style="@style/meFormControl"
      android:text="@string/label_reset"
      />
  </LinearLayout>

</LinearLayout>