<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  >
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/label_thanks_title"
      android:textAlignment="center"
      />
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/content_thanks"
      />
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/label_thanks_license"
      android:textAlignment="center"
      />
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      android:text="@string/content_thanks_license"
      />
</LinearLayout>